Folder structure refactored

--- a/06_parsing_csv_excel/csv2xls_xlswriter.py.ipynb
+++ b/06_parsing_csv_excel/csv2xls_xlswriter.py.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# Create a workbook and add a worksheet.\n",
-    "workbook = xlsxwriter.Workbook('global_power_plant_database.xlsx')"
+    "workbook = xlsxwriter.Workbook('./global_database_power_plants/global_power_plant_database.xlsx')"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./global_power_plant_database.csv\") as csvfile:\n",
+    "with open(\"./global_database_power_plants/global_power_plant_database.csv\") as csvfile:\n",
     "    # Start from the first cell. Rows and columns are zero indexed.\n",
     "    row_num = col_num = 0\n",
     "    csvreader = csv.reader(csvfile)\n",
