--- a/06_parsing_csv_excel/read_xls_pandas.ipynb
+++ b/06_parsing_csv_excel/read_xls_pandas.ipynb
@@ -69,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel(\"global_power_plant_database.xlsx\", sheet_name=\"Sheet1\")"
+    "df = pd.read_excel(\"./global_database_power_plants/global_power_plant_database.xlsx\", sheet_name=\"Sheet1\")"
    ]
   },
   {
